# tinyraytracer

./: .gitignore  .gitmodules  .gitpod.yml  .travis.yml  CMakeLists.txt  Dockerfile  Image.glsl  Readme.md  geometry.h  help.txt  model.cpp  model.h  raytracer.cpp  tinyraytracer.cpp
doc/: offaxis1.fig  offaxis2.fig  parallax.fig  step4.webm  step5.webm  step6.webm  step8.webm  stereogram-parallax.fig  stereogram-viewing.fig
raytracing/: entities.h  raytracing.cpp  raytracing.h
